[gd_scene load_steps=4 format=3 uid="uid://cqbgm6ray4f1b"]

[ext_resource type="FontFile" uid="uid://cllq2infhgbig" path="res://assets/Font/Righteous-Regular.ttf" id="1_txou5"]
[ext_resource type="Script" path="res://scripts/create_lobby.gd" id="1_yy044"]
[ext_resource type="FontFile" uid="uid://dnlrmhj5jda0p" path="res://assets/Font/Oswald-Medium.ttf" id="2_aap0l"]

[node name="CreateLobby" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_yy044")

[node name="Title" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -157.5
offset_right = 157.5
offset_bottom = 63.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_txou5")
theme_override_font_sizes/font_size = 50
text = "Create Lobby"

[node name="NameInput" type="LineEdit" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -50.0
offset_right = 250.0
grow_vertical = 0
theme_override_fonts/font = ExtResource("2_aap0l")
theme_override_font_sizes/font_size = 25
placeholder_text = "Lobby Name:"

[node name="PlayersDropdown" type="OptionButton" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -290.0
offset_top = -50.0
offset_right = -190.0
grow_horizontal = 2
grow_vertical = 0
selected = 5
item_count = 6
popup/item_0/text = "4"
popup/item_1/text = "5"
popup/item_1/id = 1
popup/item_2/text = "6"
popup/item_2/id = 2
popup/item_3/text = "7"
popup/item_3/id = 3
popup/item_4/text = "8"
popup/item_4/id = 4
popup/item_5/text = "Max Player"
popup/item_5/id = 5
popup/item_5/disabled = true

[node name="RegionDropdown" type="OptionButton" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -75.0
offset_top = -50.0
offset_right = 75.0
grow_horizontal = 2
grow_vertical = 0
selected = 0
item_count = 7
popup/item_0/text = "Select Region"
popup/item_0/disabled = true
popup/item_1/text = "Asia"
popup/item_1/id = 2
popup/item_2/text = "Europe"
popup/item_2/id = 1
popup/item_3/text = "South America"
popup/item_3/id = 3
popup/item_4/text = "Africa"
popup/item_4/id = 4
popup/item_5/text = "Australia"
popup/item_5/id = 5
popup/item_6/text = "North America"
popup/item_6/id = 6

[node name="CreateButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -150.0
offset_top = -50.0
grow_horizontal = 0
grow_vertical = 0
theme_override_fonts/font = ExtResource("1_txou5")
theme_override_font_sizes/font_size = 25
text = "Create Lobby"
